Updated project with all necessary components completed

--- a/css/base/_foundation.scss
+++ b/css/base/_foundation.scss
@@ -16,13 +16,13 @@ body {
 
 fieldset {
   background-color: white;
-  color: #757575;
+  color: $gray;
   height: 300px;
   width: 85%;
   display: flex;
   margin: 20px auto;
   border-radius: 25px;
-  border-color: #757575;
+  border-color: $lightGray;
   .inputs {
     margin: 10px;
     padding: 10px;
@@ -33,6 +33,24 @@ fieldset {
   ::placeholder {
     color: $jetBlue;
   }
+}
+
+.search button {
+    display: flex;
+    margin: 0 auto;
+    border-radius: 0 25px;
+    background-color: $bigButton;
+    border-color: $bigButton;
+    width: 85%;
+    height: 75px;
+    font-weight: bold;
+    justify-content: center;
+    @include buildFont($primaryFont, 18px, white);
+   
+    .search-text {
+        text-decoration: none;
+        color: white;
+    }
 }
 
 @media all and (min-width: 700px) {
