--- a/css/views/_home.scss
+++ b/css/views/_home.scss
@@ -14,7 +14,7 @@
     margin: 0 auto;
     height: 100px;
     justify-content: space-between;
-    border-bottom: solid 2px #757575;
+    border-bottom: solid 1px $gray;
 
     .svg {
         height: 50px;
@@ -33,6 +33,6 @@
     text-decoration: none;
     }
     .image-link-border {
-        border-bottom: solid 5px #ff8201;
+        border-bottom: solid 5px $bigButton;
     }
 }
