--- a/css/regions/_footer.scss
+++ b/css/regions/_footer.scss
@@ -1,5 +1,11 @@
 footer {
-    background-color: blue;
-    padding: 10px;
-    color: yellow;
+    background-color: $jetBlue;
+    padding: 50px;
+    margin: 50px;
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+    .fees {
+        color: white;
+    }
 }
