--- a/css/base/_foundation.scss
+++ b/css/base/_foundation.scss
@@ -15,14 +15,14 @@ body {
 }
 
 fieldset {
-  background-color: white;
+  background-color: $lightGray;
   color: $gray;
   height: 300px;
   width: 85%;
   display: flex;
   margin: 20px auto;
   border-radius: 25px;
-  border-color: $lightGray;
+  border-color: $gray;
   .inputs {
     margin: 10px;
     padding: 10px;
