--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,3 @@
-@import 'base/variables', 'base/mixins', 'base/foundation';
-@import 'regions/header', 'regions/footer';
-@import 'views/home';
+@import "base/variables", "base/mixins", "base/foundation";
+@import "regions/header", "regions/footer";
+@import "views/home";
